--- a/notebooks/1-eda-nulos.ipynb
+++ b/notebooks/1-eda-nulos.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2680,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2732,7 +2732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2741,7 +2741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2757,7 +2757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2767,7 +2767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2829,7 +2829,7 @@
        "0      7037     3    True  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2847,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3414,7 +3414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3423,12 +3423,12 @@
     "df_madrid.reset_index(inplace=True, drop=True)\n",
     "\n",
     "# Cambiamos las habitaciones y los baños a categóricas ya que se comportan como tal\n",
-    "df_madrid[[\"rooms\", \"bathrooms\", \"exterior\"]] = df_madrid[[\"rooms\", \"bathrooms\", \"exterior\"]].astype(\"O\")"
+    "df_madrid[[\"rooms\", \"bathrooms\", \"exterior\"]] = df_madrid[[\"rooms\", \"bathrooms\", \"exterior\"]].astype(\"str\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3643,7 +3643,7 @@
        "[352 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3661,7 +3661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3689,7 +3689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3723,7 +3723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3759,7 +3759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3795,7 +3795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3840,7 +3840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3849,7 +3849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -3868,7 +3868,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3879,11 +3879,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_madrid.to_csv(\"../datos/df_madrid_sin_nulos.csv\")"
+    "df_madrid.to_csv(\"../datos/df_madrid_nonulls.csv\")"
    ]
   }
  ],
